[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrob"
version = "0.0.1"
authors = [
  { name="drbright", email="gkigki111@gmail.com" },
]
description = "Robot algorithms toolbox"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Framework :: Robot Framework"
]

[project.urls]
Homepage = "https://github.com/dr-bright/pyrob"
Issues = "https://github.com/dr-bright/pyrob/issues"
